--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-body {background-color: #a87f7fa1;font-family: serif;border:40px solid #854e4e;max-width: 85%; margin: auto;padding: 40px;}
-.a {max-width: 60%; margin: auto;padding: 15px;}
-.b {}
-  img {border-radius: 8px;
-  box-shadow: 4px 4px 16px rgba(98, 53, 31, 1);a }
+body {background-color: #a87f7fa1;font-family: serif;border:60px solid #854e4e;max-width: auto; margin: auto;padding: auto;}
+.a {max-width: 750px; margin:auto;padding: 15px;}
+img {border-radius: 8px;box-shadow: 4px 4px 16px rgba(98, 53, 31, 1) }
